fix: Agregar versionado a scripts JS para forzar recarga de caché

--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/app.js"></script>
-    <script src="js/rifas.js"></script>
+    <script src="js/app.js?v=7.1"></script>
+    <script src="js/rifas.js?v=7.1"></script>
 </body>
 </html>
